--- a/workshop.html
+++ b/workshop.html
@@ -32,16 +32,8 @@
                 <div class="new-button-text">Generate</div>
             </a>
         <div class="file-grid">
-            <div class="file">
-                <div class="file-title">Recycling List</div>
-                <div class="file-bottom">
-                    <div class="items-tag">
-
-                    </div>
-                </div>
-            </div>
-            <div class="file"></div>
         </div>
     </div>
+    <script type="module" src="scripts/workshop.js" ></script>
 </body>
 </html>
